# Etch---HabbitTracker

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  SETUP_COMPLETE.md
habit-tracker/services/backend/: .dockerignore  Dockerfile  Makefile  SESSION_REVIEW.md  alembic.ini  init_db.sh  pyproject.toml  seed_data.py
habit-tracker/services/backend/alembic/: env.py
habit-tracker/services/backend/alembic/versions/: 2026_02_06_2051-10abe04ed653_initial_migration.py  2026_07_22_1353-0d7b1cb0f163_category_display_mode_group.py  2026_07_22_1600-3f2a9c1b7e44_ai_reports_table.py  2026_07_22_1830-5b3d8c9a1f27_category_streak_mode.py  2026_07_23_1200-a1c2d3e4f5a6_field_type_duration.py  2026_07_23_1900-b2d4e6f8a1c3_entries_idempotency_key.py
habit-tracker/services/backend/app/: main.py
habit-tracker/services/backend/app/api/: categories.py  entries.py  insights.py  journal.py  table.py
habit-tracker/services/backend/app/core/: auth.py  config.py  database.py
habit-tracker/services/backend/app/crud/: __init__.py  category.py  entry.py  insight.py  journal.py  streak.py  table.py  values.py
habit-tracker/services/backend/app/llm/: __init__.py  cli.py  client.py  context.py  prompts.py
habit-tracker/services/backend/app/models/: __init__.py  ai_report.py  category.py  entry.py  entry_value.py  field.py  journal.py
habit-tracker/services/backend/tests/: conftest.py  test_auth.py  test_categories.py  test_checklist.py  test_crud_values.py  test_entries.py  test_idempotency.py  test_insights.py  test_journal.py  test_llm_cli.py  test_streak.py  test_table.py
(+200 files in other folders)
