# [review:need-review] PHASE-01/13-backend-uv-mypy-ruff
# summary: uv-managed project config (deps from requirements.txt) + ruff/mypy strict settings
[project]
name = "habit-tracker-backend"
version = "1.0.0"
description = "Habit Tracker API backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    # sqlalchemy's own greenlet marker skips macOS arm64 -- declare it explicitly
    "greenlet>=3.0",
    "sqlalchemy==2.0.23",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "alembic==1.12.1",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "python-dateutil==2.8.2",
    "gunicorn>=26.0.0",
]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "mypy>=1.10",
    "ruff>=0.4",
    "asyncpg-stubs>=0.29",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py310"
extend-exclude = ["alembic/versions"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
